--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -2,10 +2,7 @@
 
 $pad: 100px;
 
-#_Header{
-	border: thin solid blue;
-	padding: 100px 50px;
-
+@mixin generalStyles() {
 	.half{
 		display: inline-block;
 		width: 50%;
@@ -33,4 +30,155 @@ $pad: 100px;
 		color: $blue;
 	}
 
+	.circles{
+		width: 40px;
+		height: 40px;
+		position: relative;
+		margin: 100px auto;
+
+		> div{
+			width: 100%;
+			height: 100%;
+			border-radius: 50%;
+			background-color: #333;
+			opacity: 0.6;
+			position: absolute;
+			top: 0;
+			left: 0;			
+			animation: sk-bounce 3.0s infinite ease-in-out;
+		}
+
+		.circ2{ animation-delay: -2.0s; }
+		.circ3{ animation-delay: -1.0s; }
+
+		@-webkit-keyframes sk-bounce {
+			0%, 100% { -webkit-transform: scale(0.0) }
+			50% { -webkit-transform: scale(1.0) }
+		}
+
+		@keyframes sk-bounce {
+			0%, 100% { 
+			    transform: scale(0.0);
+			    -webkit-transform: scale(0.0);
+			} 50% { 
+			    transform: scale(1.0);
+			    -webkit-transform: scale(1.0);
+			}
+		}
+	}
+
+	.music{
+		margin: 100px auto;
+		width: 100px;
+		height: 60px;
+		text-align: center;
+		font-size: 10px;
+
+		> div{
+			background-color: #333;
+			height: 100%;
+			width: 6px;
+			display: inline-block;
+			margin: 0 2px 0 0;
+
+			animation: sk-stretchdelay 1.2s infinite ease-in-out;
+		}
+
+		.bar2 {animation-delay: -1.1s; }
+		.bar3 {animation-delay: -1.0s; }
+		.bar4 {animation-delay: -0.9s; }
+		.bar5 {animation-delay: -0.8s; }
+		.bar6 {animation-delay: -0.78s; }
+		.bar7 {animation-delay: -0.68s; }
+		.bar8 {animation-delay: -0.58s; }
+		.bar9 {animation-delay: -0.48s; }
+		.bar10 {animation-delay: -0.38s; }
+
+		@keyframes sk-stretchdelay {
+			0%, 40%, 100% { transform: scaleY(0.05); }  
+			20% { transform: scaleY(1.0); }
+		}
+	}
+
+	.blinky{
+		width: 50px;
+		height: 50px;
+		margin: 100px auto;
+		background-color: #333;
+		border-radius: 10px;  
+		animation: sk-scaleout 1.0s infinite ease-in-out;
+
+		@keyframes sk-scaleout {
+			0% { transform: scale(0); } 
+			100% {
+				transform: scale(1.0);
+				opacity: 0;
+			}
+		}
+	}
+
+	.pulse{
+		height: 100px;
+		width: 200px;
+		overflow: hidden;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		margin: auto;
+		background: #333;
+
+		&:after{
+			content: '';
+			display: block;
+			background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 200px 100px" enable-background="new 0 0 200px 100px" xml:space="preserve"><polyline fill="none" stroke-width="3px" stroke="white" points="2.4,58.7 70.8,58.7 76.1,46.2 81.1,58.7 89.9,58.7 93.8,66.5 102.8,22.7 110.6,78.7 115.3,58.7 126.4,58.7 134.4,54.7 142.4,58.7 197.8,58.7 "/></svg>') 0 0 no-repeat;
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			animation: 2s pulse linear infinite;
+			clip: rect(0, 0, 100px, 0);
+		}
+
+		&:before{
+			content: '';
+			position: absolute;
+			z-index: -1;
+			left: 2px;
+			right: 2px;
+			bottom: 0;
+			top: 16px;
+			margin: auto;
+			height: 3px;
+		}
+
+		@keyframes pulse {
+			0% { clip: rect(0, 0, 100px, 0); }
+			4% { clip: rect(0, 66.66667px, 100px, 0); }
+			15% { clip: rect(0, 133.33333px, 100px, 0); }
+			20% {
+				clip: rect(0, 300px, 100px, 0);
+				opacity:1;
+			}
+			80% {
+			    clip: rect(0, 300px, 100px, 0);
+			    opacity:0;
+			}
+			90% { opacity: 0; }
+			100% {
+			    clip: rect(0, 300px, 100px, 0);
+			    opacity:0;
+			}
+		}
+	}
+}
+
+#_Header{
+	border: thin solid blue;
+	padding: 100px 50px;
+
+	@include generalStyles();		
+
+	&.dark{
+		@include generalStyles();
+	}
 }
